fix to horizontal aligned buttons

--- a/TA TRY/db.css
+++ b/TA TRY/db.css
@@ -39,16 +39,13 @@ body{
 }
 
 .box{
-    display: box;
-    box-orient: vertical;
-    margin-top: 1cm;
+    margin-top: 0.5em;
     border: solid black;
     margin-left: auto;
     margin-right: auto;
     height: 150px;
     display: flex;
-    justify-content: flex-end;
-    flex: auto;
+    justify-content: space-between;
     width: 80%;
     padding: 1em;
     border-radius: 20px;
@@ -57,12 +54,13 @@ body{
 .edit{
     display: flex;
     flex-direction: column;
+    justify-content: center;
     margin-top: 1cm;
     background-color: white;
     border: 0em;
     border-radius: 15px;
     padding: 0.5em 0.75em;
     color: black;
-    border: 2px solid black;
-    margin: 0px 20px;
+    border: 1px solid black;
+    margin: 10px 20px;
 }
